--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -6,4 +6,5 @@
 @import "variables";
 
 // Bootstrap
+@import "node_modules/font-awesome/scss/font-awesome.scss";
 @import "node_modules/bootstrap/scss/bootstrap.scss";
