--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -27,7 +27,8 @@ $font-general: #ff7100;
 $red_ :#d04437;
 // Brands
 $brand-primary_: #3097D1;
-$brand-primary: #3B5998;
+$brand-primary__: #3B5998;
+$brand-primary: #bf5329;
 $brand-info: #8eb4cb;
 $brand-success: #2ab27b;
 $brand-warning: #cbb956;
