--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -8,3 +8,14 @@
 // Bootstrap
 @import "node_modules/font-awesome/scss/font-awesome.scss";
 @import "node_modules/bootstrap/scss/bootstrap.scss";
+
+
+
+
+@import "component/module/module";
+@import "component/module/spec_blue";
+@import "component/module/spec_green";
+@import "component/module/spec_red";
+@import "component/module/spec_violet";
+@import "component/utility/utility";
+
