--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -62,6 +62,7 @@ $bgc-h:#dcdee3;
 $icon-font-path: "~bootstrap-sass/assets/fonts/bootstrap/";
 $font-family-sans-serif: "Roboto", sans-serif;
 $line-height-base: 1.6;
+$global-font-size: 16px;
 $text-color: #636b6f;
 
 // Navbar
