--- a/resources/assets/sass/component/module/_module.scss
+++ b/resources/assets/sass/component/module/_module.scss
@@ -44,6 +44,7 @@
     }
 
     .module-raccourcit a{
+      font-size: 1.1em;
       color:$darker-gray;
       text-align: center;
       padding: 14px 12px 13px 12px;
