--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -1,3 +1,17 @@
+//
+//$container-max-widths: (
+//        sm: 640px,
+//        md: 1024px,
+//        lg: 1200px,
+//        xl: 1440px
+//) !default;
+//$grid-breakpoints: (
+//        xs: 0,
+//        sm: 683px,
+//        md: 1092px,
+//        lg: 1279px,
+//        xl: 1535px
+//) !default;
 
 // Body
 $body-bg: #f5f8fa;
